# collaborative_rlvr_for_robust__20260311_191556_57725957

./: .gitignore  .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
datasets/samples/: dapo_math_17k_sample.json  gsm8k_sample.json  gsm_symbolic_sample.json  math_500_sample.json  math_sample.json
logs/: execution_claude_transcript.jsonl  research_prompt.txt  resource_finder_claude_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_search_results/: arxiv_key_results.json  arxiv_results.json  curated_papers.json
papers/: README.md  notes_additional_papers.md  notes_deepseek_r1.md  notes_gsm_symbolic.md  notes_improving_factuality_debate.md  notes_limits_generalization_rlvr.md  notes_rlvr_correct_reasoning.md  notes_self_debate_rl.md
papers/pages/: 2305.14325v1_improving_factuality_debate_du_manifest.txt  2305.18248v2_measuring_faithfulness_cot_manifest.txt  2410.05229v1_gsm_symbolic_manifest.txt  2411.16532v1_deepseek_math_r1_zero_manifest.txt  2501.12948v1_deepseek_r1_manifest.txt  2503.18892v3_simplerl_zoo_manifest.txt  2504.05047v2_debate_only_when_necessary_manifest.txt  2505.10978v1_cot_not_always_faithful_manifest.txt  2506.14245v2_rlvr_correct_reasoning_manifest.txt  (+11 more)
results/: analysis_summary.json  config.json  debate_results.json  problems.json  sc_results.json  single_agent_results.json
src/: analyze_results.py  benchmark_speed.py  experiment.py
(+30 files in other folders)
