[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for Collaborative RLVR for Robust Reasoning"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
